# RealCity

client/real-city/: package-lock.json  package.json
client/real-city/src/: App.tsx
server/RealCity/: .gitignore
server/RealCity/RealCity.WebApi/Controllers/: RoadsController.cs
server/RealCity/RealCity.WebApi/Properties/: launchSettings.json
server/RealCity2/: RealCity.sln
server/RealCity2/RealCity.WebApi/: RealCity.WebApi.csproj  WeatherForecast.cs
server/real-city/: Cargo.toml
server/real-city/src/: main.rs
server/real-city/src/api/: route.rs
