[package]
name = "real-city"
version = "0.1.0"
edition = "2021"
authors = [ "marcin.bigos99@gmail.com" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^1.0", features = ["v4"] }
serde = { version = "^1.0", features = ["derive"] }
env_logger = "^0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"